# Neural_Simulated_Annealing_CVRP_PPO

./: .gitignore  README.md  Res.xlsx  launch_HP_sweep.py  pyproject.toml  requirements.txt  settings.py
Scripts/: bdd.py  eval.py  eval_on_bdd.py  func.py  generate_csv_data.py  generate_plot.py  init_methods.py  sensitivity_model.py  visu_exp.py  visu_prob_acceptance.py
bdd/: README.md  generate_csv_data.py  results_ortools.json
evaluation/: Nazari_eval.py  README.md  cv_evaluation.py  eval.py  eval_on_bdd.py  func.py  generate_res_plot.py  visu_exp.py
generated_nazari_problem/: eval_or_tools.py  gen_nazari_10.pt  gen_nazari_20.pt  generate_nazari_pb.py
generated_problem/: README.md  create_torch_bdd.py  generate_pb.py  generator.py  or_tools_gen1000_1.csv  or_tools_gen100_1.csv  or_tools_gen500_1.csv  or_tools_gen50_1.csv  or_tools_on_gen.py  problem_data_dim100_load50_clusteringTrue.pt  problem_data_dim100_load50_solution_or_tools.pt
generated_problem/scripts_gen/: generate_sh.py
generated_uchoa_problem/: README.md  create_torch_bdd.py  gen_uchoa_10.pt  gen_uchoa_20.pt  generate_pb.py
generated_uchoa_problem/scripts_gen/: generate_sh.py
pb/: generate_pb.py  problem_data_dim100_load50_clusteringFalse.pt  problem_data_dim100_load50_clusteringFalse_solution_or_tools.pt  problem_data_dim100_load50_clusteringTrue_solution_or_tools.pt  tmp.py
plots/: README.md  TSP_split.py  init_methods.py  temp_strategies.py  time_baseline_sa.py  visu_prob_acceptance.py
res/: Vrp-Set-XML100_res.csv
res/models_res/: read_res.py
src/: HP.py  HP.yaml  HP_sweep.yaml  Logger.py  algo.md  attention.py  eval.py  eval_baseline.py  eval_model.py  heur_init.py  main.py  model.csv  model.py  or_tools.py  plot.py  ppo.py  ppo2.py  problem.py  replay.py  res_baseline.csv  res_model.csv  sa.py  scheduler.py  test.ipynb  test.yaml  utils.py  visu.py
src/HyperParameters/: HP.yaml  HP_sweep.yaml
src/TSP/: __init__.py  model.py  model_TSP.pt
src/algo/: TropicalAttention.py  __init__.py  generate_uchoa.py  heur_init.py  local_heuristics.py  or_tools.py
src/ppo/: __init__.py  ppo.py  replay.py
src/sa/: __init__.py  sa_baseline.py  sa_test.py  sa_train.py
src/setup/: Logger.py  __init__.py
